# new_gcn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Todo.txt  a.cc  download_graph.py  draw_graph.py  get.py  get_graph.py  graph.py  out.vec  run_ideal.py
data/: CMakeLists.txt  citeseer.graph  main.cc  presort.py  pubmed.graph  transformer.cc  transformer.h
run/: 16Magg.txt  DDR3_1Gb_x8_1333.ini  DDR3_4Gb_x16_1600.ini  DDR3_4Gb_x16_1866.ini  DDR3_4Gb_x4_1600.ini  DDR3_4Gb_x4_1866.ini  DDR3_4Gb_x8_1600.ini  DDR3_4Gb_x8_1866.ini  DDR3_8Gb_x16_1600.ini  DDR3_8Gb_x16_1866.ini  DDR3_8Gb_x4_1600.ini  DDR3_8Gb_x4_1866.ini  DDR3_8Gb_x8_1600.ini  DDR3_8Gb_x8_1866.ini  DDR4-config.cfg  DDR4_4Gb_x16_1866.ini  DDR4_4Gb_x16_2133.ini  DDR4_4Gb_x16_2133_2.ini  DDR4_4Gb_x16_2400.ini  DDR4_4Gb_x16_2400_2.ini  DDR4_4Gb_x16_2666.ini  DDR4_4Gb_x16_2666_2.ini  DDR4_4Gb_x4_1866.ini  DDR4_4Gb_x4_2133.ini  DDR4_4Gb_x4_2133_2.ini  DDR4_4Gb_x4_2400.ini  DDR4_4Gb_x4_2400_2.ini  DDR4_4Gb_x4_2666.ini  DDR4_4Gb_x4_2666_2.ini  DDR4_4Gb_x8_1866.ini  DDR4_4Gb_x8_2133.ini  DDR4_4Gb_x8_2133_2.ini  DDR4_4Gb_x8_2400.ini  DDR4_4Gb_x8_2400_2.ini  DDR4_4Gb_x8_2666.ini  DDR4_4Gb_x8_2666_2.ini  DDR4_8Gb_x16_1866.ini  DDR4_8Gb_x16_2133.ini  DDR4_8Gb_x16_2133_2.ini  DDR4_8Gb_x16_2400.ini  (+66 more)
run/results/: 2Magg.txt  32Magg.txt  4Magg.txt  8Magg.txt  amazon_photo_ramu.txt  args.txt  citeseer-gsc-drm2.txt  cora-gcn-drm2.txt  cora_gog_ramu.txt  dblp.gog-gsc-drm2.txt  dblp.gog_ramu.txt  dblp_dram2.txt  dblp_l0_dram2.txt  dblp_l1_dram2.txt  dblp_m0_dram2.txt  dblp_m0_ramu.txt  dblp_m1_dram2.txt  dblp_m1_dram3.txt  dblp_m1_ramu.txt  dblp_m2_dram2.txt  dblp_m2_dram3.txt  dblp_m2_ramu.txt  dblp_m3_dram2.txt  dblp_m3_dram3.txt  dblp_m3_ramu.txt  dblp_ramu.txt  dramsim3-pubmed-gcn.txt  dramsim3-pubmed-gin.txt  dramsim3-pubmed-gsc.txt  dramsim3.txt  mem_stats.txt  pubmed-gcn-1024.txt  pubmed-gcn-32.txt  pubmed-gin-1024.txt  pubmed-gin-32.txt  pubmed-gsc-drm2.txt  pubmed_ramu.txt  reddit-gsc-drm2.txt  reddit_dram2.txt  reddit_m0.dram3.txt  (+9 more)
run/results-ramu/: acm_ramu.txt  amazon_cs_ramu.txt  amazon_photo_ramu.txt  amazon_phy_ramu.txt  blogcatalog_ramu.txt  citeseer_ramu.txt  coauthor_cs_ramu.txt  coauthor_phy_ramu.txt  cora_full_ramu.txt  dblp.gog_ramu.txt  dblp_ramu.txt  dblpl_gog_ramu.txt  flickr_ramu.txt  pubmed_gog_ramu.txt  pubmed_ramu.txt
run/tmp/: handle_edges.txt  input_windows.txt  names.txt  show.py
run_cont/: get.py  run-ramu.py
run_dense/: get.py  run-ramu.py  run.py  run_dense.sh  show.py
run_outer_queue/: __init__.py  all_list.py  change.py  draw.py  gcn_sim  get2.py  run-outer-list.py  run-seq.py  test_all_graph.py  workloads_defs.py
run_sched/: Graph_saint_ppi.ramuepoch.json  Makefile  check_graph.py  compile_commands.json  get.py  get_histo.py  run-ideal.py  run-ramu.py  run-seq.py  run.sh  run_ideal.py  workloads_defs.py
run_scripts/: gcn_sim  run.py
src/: Aggregator.cc  Aggregator.h  Aggregator_fast.cc  Aggregator_fast.h  Hash_table.cc  Hash_table.h  Model.cc  Model.h  Slide_window.cc  Slide_window.cc.old  Slide_window.cpp  Slide_window.h  Slide_window.h.old  System.cc  System.h  System_fast.h  SystolicArray.cc  SystolicArray.h  SystolicArray_fast.h  aggregate.cc  aggregate.cc.old  aggregate.h  buffer.cc  buffer.h  buffer_fast.cc  buffer_fast.h  contoll_signal_generator.cc  contoll_signal_generator.hh  controller.cc  controller.h  debug_helper.h  dram_wrapper.cc  dram_wrapper.h  dramsim2_wrapper.cc  dramsim2_wrapper.h  dramsim_wrapper.cc  dramsim_wrapper.h  edge_hash.cc  edge_hash.h  fast_sched.cc  (+20 more)
src/dense-window-lib/: Cargo.toml
src/dense-window-lib/src/: lib.rs
src/utils/: average_number.hh  cal_systolic_cycle.py  common.hh  sized_queue.h  test.hh
test/: HBM2_8Gb_x128.ini  aggregator_test.cc  controller_test.cc  dense_sliding_window_test.cc  dram2sim_test.cc  dram3sim_test.cc  fast_sched_test.cc  generate_graph.cc  generate_graph.h  generate_graph_test.cc  hash_table_test.cc  mapping_test.cc  mem_interface_test.cc  memory_interface_test.cc  mix_system_test.cc  ramu_test.cc  ramut_test.cc  sliding_iter_test.cc  sorted_graph_test.cc  system_test.cc  test.graph  test.slides  utils_test.cc  windows_slid_test.cc
